sync timer and floting button fixed on small device

--- a/style.css
+++ b/style.css
@@ -305,5 +305,8 @@ hr{
     #Record-headline{
         font-size: 20px;
     }
+    .floating-button{
+        position: fixed;
+    }
 
 }
